updating  makefile game

--- a/jogoDaDigitacao/Makefile
+++ b/jogoDaDigitacao/Makefile
@@ -12,10 +12,17 @@ LIBS = -lsfml-graphics -lsfml-window -lsfml-system
 # Arquivo fonte do seu programa
 SOURCE = solver.cpp
 
+# Regra para limpar o arquivo executável
+all: main
+
 # Regra para a compilação do programa
-$(TARGET): $(SOURCE)
+main: $(SOURCE)
 	$(CC) $(CFLAGS) $(SOURCE) $(LIBS) -o $(TARGET)
 
-# Regra para limpar o arquivo executável
+# Regra para limpar o arquivo
 clean:
 	rm -f $(TARGET)
+
+# Regra para rodar o programa
+rum: solver
+	./solver
